# my_tech_stack

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .makefile_achievements  .pre-commit-config.yaml  .tool-versions  .yamllint.yml  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  renovate.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yaml
apps/api-gateway/: Dockerfile  Dockerfile.dev  package.json
backstage/: catalog-info.yaml
docs/: Dockerfile  comprehensive-documentation-analysis-report.md  docusaurus.config.ts  makefile-gamification-guide.md  package.json  sidebars.ts
docs/architecture/: enhanced-makefile-design.md  gamification-implementation-strategy.md  gamification-system-design.md  gamification-ux-specifications.md  makefile-integration-guide.md
docs/docs/: intro.md
docs/gamification/: GAMIFICATION_INTEGRATION_COMPLETE.md  INTEGRATION_VALIDATION_REPORT.md  achievements.md  index.md  interactive-components.md  interactive-dashboard.md  interactive-features.md  interactive-integration.md  leaderboard-system.md  skill-tree.md  visual-showcase.md
docs/progress/: assessment.md  calculators.md  celebrations.md  templates.md  tracker.md  verification.md
plans/: tech_stack.md
scripts/: build_all.sh  init-postgres.sh
services/users/: Cargo.toml  Dockerfile  Dockerfile.dev
services/users/src/: main.rs
tests/: GAMIFICATION_QA_REPORT.md  README.md  gamification-manual-test-checklist.md  gamification-performance-test.js  gamification-qa-test-suite.js
(+55 files in other folders)
